# aws-batch-tagger

./: .bumpversion.cfg  .flake8  .gitignore  Makefile  README.md  pyproject.toml
s3tagger/: cli.py  constants.py
s3tagger/commands/: cmd_clean.py  cmd_populate.py  cmd_process.py  cmd_status.py
s3tagger/utilities/: aws.py  helpers.py  loader.py  queue.py  queueing.py  worker.py
tests/: conftest.py
tests/e2e/: test_e2e.py  test_e2e_populate.py  test_e2e_process.py  test_e2e_status.py
tests/test_utilities/: constants.py  fixtures.py
tests/unit_tests/helpers/: test_aws.py  test_loader.py  test_queue.py  test_worker.py
